--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
+	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.svg" /> -->
+	<link rel="icon" href="%sveltekit.assets%/icon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
 </head>
