--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,16 @@
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.svg" /> -->
 	<link rel="icon" href="%sveltekit.assets%/icon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- Google tag (gtag.js) -->
+	<!-- dev環境では動作しない -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9HN402YGK2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'G-9HN402YGK2');
+		console.log('Google tag (gtag.js) loaded.');
+	</script>
 	%sveltekit.head%
 </head>
 
