--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,11 @@
 	<!-- <link rel="icon" href="%sveltekit.assets%/favicon.svg" /> -->
 	<link rel="icon" href="%sveltekit.assets%/icon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<!-- Google Adsense -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9818483692589329"
+		crossorigin="anonymous"></script>
+
 	<!-- Google tag (gtag.js) -->
 	<!-- dev環境では動作しない -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9HN402YGK2"></script>
